[gd_scene load_steps=8 format=3 uid="uid://00yvdipsto66"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_w0jui"]
[ext_resource type="Curve" uid="uid://bsqbwnph7wxw8" path="res://ShrinkCurve.tres" id="2_rjsis"]
[ext_resource type="PackedScene" uid="uid://43v6u8hcob3i" path="res://PlayerScenes/vacuum.tscn" id="3_ubopx"]

[sub_resource type="Curve" id="Curve_4ocgc"]
min_value = 0.3
max_value = 1.5
_data = [Vector2(0, 0.3), 0.0, 0.444958, 0, 0, Vector2(1, 1.5), 0.448575, 0.0, 0, 0]
point_count = 2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1nnjg"]
margin = 0.0
radius = 0.25
height = 1.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_nuvxq"]
radius = 0.25
height = 1.0

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_el5vr"]
margin = 0.0
length = 0.01

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.760778, 0)
collision_layer = 8
collision_mask = 7
script = ExtResource("1_w0jui")
x_sensitivity = 0.2
y_sensitivity = 0.05
knockback_during_grow = 6
shrink_curve = ExtResource("2_rjsis")
speed_size_curve = SubResource("Curve_4ocgc")
shrink_rate = 0.8

[node name="Collider" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_1nnjg")

[node name="Mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_nuvxq")

[node name="HeadRaycastTarget" type="Marker3D" parent="Mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.608958, 0)

[node name="CameraPivot" type="Node3D" parent="."]

[node name="CameraArm" type="SpringArm3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.996041, 0.0888943, 0, -0.0888943, 0.996041, 0, 0, 0)
collision_mask = 7
shape = SubResource("SeparationRayShape3D_el5vr")
spring_length = 3.0

[node name="Camera" type="Camera3D" parent="CameraPivot/CameraArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
near = 0.001

[node name="Vacuum" parent="CameraPivot" instance=ExtResource("3_ubopx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.404581, -0.0659293, -0.225988)
